fixed support sizing

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3102,3 +3102,8 @@ h1.driver-title {
     from { opacity: 0; }
     to { opacity: 1.0; }
 }
+
+.support-side-chat-table {
+	height: 100%;
+	width: 100%;
+}
