fixed class definition for support side

--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-view.phtml
@@ -1,6 +1,6 @@
 
 	<div ng-controller="SideTicketCtrl" class="support-side-chat">
-		<table style="height: 100%">
+		<table class="support-side-chat-table">
 			<tr><td class="support-chat-header">
 				<a class="support-chat-header-back" ng-click="setViewTicket(0)">&nbsp;<i class="fa fa-chevron-left"></i> Issues</a>
 				<a class="support-chat-header-issue" href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</a>
