--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -9,6 +9,10 @@
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.18/angular-resource.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.18/angular-animate.min.js"></script>
 <script src="//cdn.socket.io/socket.io-1.2.0.js"></script>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-moment/0.8.0/angular-moment.min.js"></script>
+
 <!-- Payment stuff -->
 <script src="https://js.stripe.com/v2/"></script>
 <script src="https://js.balancedpayments.com/1.1/balanced.js"></script>
