--- a/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/settlement/settlement-drivers-payment.phtml
@@ -79,7 +79,11 @@
 				<tr class="transparent"><td></td><td></td></tr>
 				<tr ng-if="result.balanced_id">
 					<td>Balanced</td>
-					<td>{{result.balanced_id}}</td>
+					<td>
+						<a href="https://dashboard.balancedpayments.com/#/marketplaces/	***REMOVED***/credits/{{result.balanced_id}}">
+							{{result.balanced_id}}
+						</a>
+					</td>
 				</tr>
 				<tr>
 					<td><strong>Balanced Status</strong></td>
