--- a/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-payment.phtml
@@ -234,7 +234,7 @@
 					<td></td>
 				</tr>
 			</thead>
-			<thead ng-if="result.orders.length">
+			<thead ng-if="result.orders.included.length">
 				<tr>
 					<td class="hide-tiny-screen">#</td>
 					<td>
