--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -529,11 +529,27 @@ p {
 	color: $navHilight;
 	font-size: 2em;
 	cursor: pointer;
+
+	-webkit-transform: translateX(0) !important;
+
+	-webkit-transition: all .2s;
+	   -moz-transition: all .2s;
+		-ms-transition: all .2s;
+		 -o-transition: all .2s;
+			transition: all .2s;
 }
 
 .menu-tab.menu-active {
 	border: 2px solid $green;
 	color: $green;
+}
+.menu-tab:hover {
+	background: $navHilight;
+}
+
+.menu-tab:hover:not(.menu-active) {
+	color: $navLinkColor;
+
 }
 
 .menu-tab:nth-child(2) {
