--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -84,7 +84,7 @@
 				</table>
 			</a>
 
-			<a href="/restaurant/order/placement/dashboard" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isRestaurant)  && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'restaurant-order-placement')}">
+			<a href="/restaurant/order/placement/dashboard" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isRestaurant) && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'restaurant-order-placement')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-credit-card"></i></td>
