--- a/include/views/default/cockpit2/frontend/general/general-profile.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-profile.phtml
@@ -35,7 +35,7 @@
 				<p>
 					Give this code to your friends to get <b>${{customer_get_referred_amt|formatPrice}} off</b> their first order and <b>earn ${{admin_refer_user_amt|formatPrice}}</b> yourself for every new customer your refer!
 				</p>
-				<div class="invite-code">{{account.user.invite_code}}</div>
+				<div class="invite-code allow-select">{{account.user.invite_code}}</div>
 			</li>
 		</ul>
 	</div>
