--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -650,7 +650,7 @@ p {
 		margin-right: 300px;
 	}
 	.left-menu-fix {
-		background: #2f323a;
+		background: $sideBg;
 		position: fixed;
 		width: 222px;
 		height: 100%;
