--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -123,14 +123,14 @@ html {
 	.content-padding {
 		padding: 10px;
 	}
-	*:not(input):not(textarea):not(.allow-select) {
+	*:not(input,textarea,.allow-select) {
 		-webkit-touch-callout: none;
-		-webkit-user-select: none;
-		 -khtml-user-select: none;
-			 -moz-user-select: -moz-none;
-				-ms-user-select: none;
-				 -o-user-select: none;
-						user-select: none;
+		 -webkit-user-select: none;
+		  -khtml-user-select: none;
+		    -moz-user-select: -moz-none;
+		     -ms-user-select: none;
+			  -o-user-select: none;
+			     user-select: none;
 	}
 }
 
