--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -19,7 +19,7 @@
 				</table>
 			</li>
 			*/ ?>
-			<a href="/profile" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'profile')}">
+			<a href="/profile" class="menu-link" ng-class="{'nav-active': (navigation.page == 'profile')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-user"></i></td>
