profile text change

--- a/include/views/default/cockpit2/frontend/general/general-profile.phtml
+++ b/include/views/default/cockpit2/frontend/general/general-profile.phtml
@@ -33,7 +33,7 @@
 	
 			<li class="li-info">
 				<p>
-					Give this code to your friends to get <b>${{customer_get_referred_amt|formatPrice}} off</b> their first order and <b>earn ${{admin_refer_user_amt|formatPrice}}</b> yourself for every new customer your refer!
+					Get new customers to put this code in the Notes section of their first order for <b>${{customer_get_referred_amt|formatPrice}} off</b> and <b>earn ${{admin_refer_user_amt|formatPrice}}</b> yourself for every new customer your refer!
 				</p>
 				<div class="invite-code allow-select">{{account.user.invite_code}}</div>
 			</li>
