--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3220,3 +3220,37 @@ input[type="checkbox"].switch + div:before {
 .tb-info-data {
 	text-align: right;
 }
+
+.deploy-wrap {
+	padding: 0;
+}
+
+.deploy-wrap table {
+	width: 100%;
+	box-sizing: border-box;
+}
+
+.deploy-wrap td, .deploy-wrap th {
+	padding: .8em;
+	font-size: 1.2em;
+	border-bottom: 1px solid #eeeeee;
+}
+.deploy-wrap tr:first-child th {
+	padding-top: 1.1em;
+}
+.deploy-wrap tr:last-child td {
+	padding-bottom: 1.1em;
+	border-bottom: none;
+}
+.deploy-wrap td:first-child, .deploy-wrap th:first-child {
+	padding-left: 1.1em;
+}
+.deploy-wrap td:last-child, .deploy-wrap th:last-child {
+	padding-left: 1.1em;
+}
+
+
+.deploy-wrap th {
+	font-weight: bold;
+	text-align: left;
+}
