--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -50,6 +50,7 @@
 <script src="/assets/cockpit/js/controllers.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.tickets.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
@@ -80,3 +81,4 @@
 <script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.push.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
