--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -3243,10 +3243,10 @@ input[type="checkbox"].switch + div:before {
 }
 
 .deploy-wrap tr:first-child > * {
-	padding-top: 1.1em;
+	padding-top: .8em;
 }
 .deploy-wrap tr:last-child > * {
-	padding-bottom: 1.1em;
+	padding-bottom: .8em;
 	border-bottom: none;
 }
 .deploy-wrap tr > *:first-child {
